Kubernetes/Karakeep/yamls/karakeep.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.13.3
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch-data
      volumes:
        - name: meilisearch-data
          persistentVolumeClaim:
            claimName: meilisearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  selector:
    app: meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  namespace: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
        - name: chrome
          image: gcr.io/zenika-hub/alpine-chrome:123
          command:
            - chromium-browser
            - --headless
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: karakeep
spec:
  selector:
    app: chrome
  ports:
    - protocol: TCP
      port: 9222
      targetPort: 9222
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-web
  namespace: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  template:
    metadata:
      labels:
        app: karakeep-web
    spec:
      containers:
        - name: karakeep-web
          image: ghcr.io/karakeep-app/karakeep
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: karakeep-data
      volumes:
        - name: karakeep-data
          persistentVolumeClaim:
            claimName: karakeep-data
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web
  namespace: karakeep
spec:
  selector:
    app: karakeep-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: karakeep-https-redirect
  namespace: karakeep
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: karakeep-security
  namespace: karakeep
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-websecure
  namespace: karakeep
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`karakeep.domain.com`)
      services:
        - name: karakeep-web
          port: 3000
          serversTransport: karakeep-transport
      middlewares:
        - name: karakeep-security
  tls:
    secretName: karakeep-domain-com
    options:
      name: karakeep-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-web
  namespace: karakeep
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`karakeep.domain.com`)
      services:
        - name: karakeep-web
          port: 3000
      middlewares:
        - name: karakeep-https-redirect
